octave2.9 (1:2.9.15-1) unstable; urgency=low

  [ Thomas Weber ]
  * New upstream release.
  * Dropped patches (applied upstream):
    + 01_include_missing_files
    + 50_mix-range-and-sparse

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Sun, 14 Oct 2007 16:31:27 +0000

octave3.0 (2.9.15-1) experimental; urgency=low

  [ Thomas Weber ]
  * Declare 2.9.15 as release candidate for 3.0. This has been discussed with
    upstream and is encouraged (closes: #446639)

  [ Rafael Laboissiere ]
  * Removed patches (applied upstream):
    + debian/patches/01_include_missing_files.dpatch
    + debian/patches/50_mix-range-and-sparse.dpatch

 -- Rafael Laboissiere <rafael@debian.org>  Sun, 14 Oct 2007 23:36:10 +0200

octave2.9 (1:2.9.14-1) unstable; urgency=low

  [ Thomas Weber ]
  * New upstream release
  * debian/rules:
    + Don't force mkoctfile to strip .oct files (closes: #437672)
    + Don't compress PDF files (partly (closes: #441722))
  * debian/in/control:
    + Add qhull to build-dependencies. Octave-forge's geometry toolbox was
      merged with Octave and needs this.
  * patches/01_include_missing_files:
    + Include .m files that were missed in the distribution tarball
      (closes the other half of #441722)

  [ Rafael Laboissiere ]
  * debian/in/PACKAGE.menu: Adapted to the new menu hierarchy, which will
    be in the next release of Policy
  * debian/rules: Increased the update-alternatives priority of octave2.9
    to 90 and keep that of octave2.1 at 80
  * debian/in/control:
    + octave*-emacsen package depends on newer emacs22
    + Build-depends on desktop-file-utils
    + Added Homepage field
  * debian/in/PACKAGE-htmldoc.doc-base.faq: Reference the correct HTML
    files of the FAQ
  * debian/rules:
    + Patch the examples/octave.desktop.in file, such that the referenced
      command exists
    + Rename the installed octave.desktop file

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Sat, 22 Sep 2007 17:13:51 +0000
