@@ -23,6 +23,9 @@ PACKAGEVER	:= $(shell echo $(PACKAGE) | \
 			perl -nle 'm/.*(\d.\d)/ and print $$1')
 #FIXME: drop PACKAGEVER after the release of 3.0 source packages!
 
+hack:
+	@echo $(PACKAGEVER)
+
 ifeq ($(major),2.9)
 priority	:= 90
 else
@@ -372,9 +375,11 @@ binary-arch: build-arch install-arch check
 		usr/share/man/man1/octave-$(version).1.gz \
 		usr/share/man/man1/octave$(major).1.gz
 	# FIXME: The following should be removed after the final 3.0 release
+ifneq ($(PACKAGEVER),$(major))
 	dh_link --package=$(PACKAGE) \
 		usr/share/man/man1/octave$(major).1.gz \
-		usr/share/man/man1/octave$(PACKAGEVER).1.gz \
+		usr/share/man/man1/octave$(PACKAGEVER).1.gz
+endif
 	# make mkoctfileX.Y a symlink and symlink the manpage as well
 	dh_link --package=$(dev_package) \
 		usr/bin/mkoctfile-$(version) usr/bin/mkoctfile$(major)
@@ -382,9 +387,11 @@ binary-arch: build-arch install-arch check
 		usr/share/man/man1/mkoctfile-$(version).1.gz \
 		usr/share/man/man1/mkoctfile$(major).1.gz
 	# FIXME: The following should be removed after the final 3.0 release
+ifneq ($(PACKAGEVER),$(major))
 	dh_link --package=$(dev_package) \
 		usr/share/man/man1/mkoctfile$(major).1.gz \
 		usr/share/man/man1/mkoctfile$(PACKAGEVER).1.gz
+endif
 	# make octaveX.Y-depends a symlink and symlink the manpage as well
 	dh_link --package=$(dev_package) \
 		usr/bin/octave-depends-$(version) \
@@ -393,9 +400,11 @@ binary-arch: build-arch install-arch check
 		usr/share/man/man1/octave-depends-$(version).1.gz \
 		usr/share/man/man1/octave$(major)-depends.1.gz
 	# FIXME: The following should be removed after the final 3.0 release
+ifneq ($(PACKAGEVER),$(major))
 	dh_link --package=$(dev_package) \
 		usr/share/man/man1/octave$(major)-depends.1.gz \
 		usr/share/man/man1/octave$(PACKAGEVER)-depends.1.gz
+endif
 	dh_strip -a
 	dh_compress -a
 	dh_fixperms -a
